# vk-api-core

./: .gitignore  readme.md  setup.cfg
src/vk-api-core/: core.py  log.py
