[metadata]
name = vk-api-core
version = 0.0.2
author = Denis Papaercut
author_email = papercut.trpg@gmail.com
description = Package for vk api requesting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pap1k/vk-api-core
project_urls =
    Bug Tracker = https://github.com/pap1k/vk-api-core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src